[package]
name = "axum-multipart"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.0", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
utoipa = { path = "../../utoipa", features = ["axum_extras"] }
utoipa-swagger-ui = { path = "../../utoipa-swagger-ui", features = ["axum"] }
utoipa-axum = { path = "../../utoipa-axum" }
serde = { features = ["derive"], version = "1" }

[workspace]
