[package]
name = "axum-utoipa-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
utoipa = { path = "../../utoipa", features = ["axum_extras", "debug"] }
utoipa-swagger-ui = { path = "../../utoipa-swagger-ui", features = ["axum"] }
utoipa-axum = { path = "../../utoipa-axum" ,features = ["debug"] }
serde = "1"

[workspace]
