[package]
name = "axum-utoipa-nesting"
description = "Axum nesting example with Swagger UI"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Elli Example <example@example.com>"]


[dependencies]
axum = "0.8.0"
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
tower = "0.5"
utoipa = { path = "../../utoipa", features = ["axum_extras"] }
utoipa-swagger-ui = { path = "../../utoipa-swagger-ui", features = ["axum", "vendored"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[workspace]
