[package]
name = "generics-actix"
description = "Simple actix-web using non-supported types and generics with utoipa and Swagger"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
  "Example <example@example.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
geo-types = { version = "0.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
utoipa = { path = "../../utoipa", features = ["actix_extras", "non_strict_integers"] }
utoipa-swagger-ui = { path = "../../utoipa-swagger-ui", features = ["actix-web"] }

[workspace]
