[package]
name = "hyperlane-openapi"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlane = "=6.1.0"
serde = "=1.0.219"
utoipa = { path = "../../utoipa", features = ["openapi_extensions"] }
utoipa-swagger-ui = { path = "../../utoipa-swagger-ui", features = ["debug-embed", "vendored", "hyperlane"] }
utoipa-rapidoc = { path = "../../utoipa-rapidoc", features = ["hyperlane"] }
serde_json = "=1.0.142"

[workspace]
