[package]
name = "rocket-0_4-hello"
description = "Simple rocket 0.4 hello example with utoipa and Swagger UI"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
  "Elli Example <example@example.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4" }
utoipa = { path = "../..", features = ["rocket_extras"] }
utoipa-swagger-ui = { path = "../../utoipa-swagger-ui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
log = "0.4"

[workspace]
