[package]
name = "rocket-todo"
description = "Simple rocket todo example api with utoipa and Swagger UI"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
  "Elli Example <example@example.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
utoipa = { path = "../..", features = ["rocket_extras"] }
utoipa-swagger-ui = { path = "../../utoipa-swagger-ui", features = ["rocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
log = "0.4"

[workspace]