[package]
name = "rocket-todo"
description = "Simple rocket todo example api with utoipa and Swagger UI, Rapidoc, Redoc, and Scalar"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Elli Example <example@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
utoipa = { path = "../../utoipa", features = ["rocket_extras"] }
utoipa-swagger-ui = { path = "../../utoipa-swagger-ui", features = ["rocket"] }
utoipa-redoc = { path = "../../utoipa-redoc", features = ["rocket"] }
utoipa-rapidoc = { path = "../../utoipa-rapidoc", features = ["rocket"] }
utoipa-scalar = { path = "../../utoipa-scalar", features = ["rocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"

[workspace]
