[package]
name = "todo-actix"
description = "Simple actix-web todo example api with utoipa and Swagger"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
  "Example <example@example.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web =  { version = "4", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
log = "0.4"
futures = "0.3"
utoipa = { path = "../..", features = ["actix_extras"] }
utoipa-swagger-ui = { path = "../../utoipa-swagger-ui", features = ["actix-web"] }